--- a/CarAlgorithm/src/caralgorithm/gameField.fxml
+++ b/CarAlgorithm/src/caralgorithm/gameField.fxml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="caralgorithm.GameField"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="174.0" prefWidth="605.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="caralgorithm.Controller">
+   <children>
+      <Label alignment="CENTER" prefHeight="58.0" prefWidth="671.0" text="Nagel-Schreckenberg-Modell">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <HBox prefHeight="125.0" prefWidth="600.0">
+         <children>
+            <Label id="green" fx:id="fieldOne" prefHeight="156.0" prefWidth="89.0" stylesheets="@stylesheet.css" />
+         </children>
+      </HBox>
+      <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="16.0" prefWidth="606.0" text="Start">
+         <VBox.margin>
+            <Insets bottom="10.0" left="50.0" right="50.0" top="10.0" />
+         </VBox.margin>
+      </Button>
+   </children>
+</VBox>
