--- a/CarAlgorithm/src/caralgorithm/gameField.fxml
+++ b/CarAlgorithm/src/caralgorithm/gameField.fxml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="174.0" prefWidth="605.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="caralgorithm.Controller">
-   <children>
-      <Label alignment="CENTER" prefHeight="58.0" prefWidth="671.0" text="Nagel-Schreckenberg-Modell">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Label>
-      <HBox prefHeight="125.0" prefWidth="600.0">
-         <children>
-            <Label id="green" fx:id="fieldOne" prefHeight="156.0" prefWidth="89.0" stylesheets="@stylesheet.css" />
-         </children>
-      </HBox>
-      <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="16.0" prefWidth="606.0" text="Start">
-         <VBox.margin>
-            <Insets bottom="10.0" left="50.0" right="50.0" top="10.0" />
-         </VBox.margin>
-      </Button>
-   </children>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<VBox fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="900.0"
+      stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="caralgorithm.Controller">
+   <Label alignment="CENTER" minWidth="-Infinity" prefHeight="60.0" prefWidth="900.0" text="Nagel-Schreckenberg-Modell">
+      <font>
+         <Font size="18.0"/>
+      </font>
+   </Label>
+   <HBox fx:id="playground" alignment="CENTER" prefHeight="125.0" prefWidth="900.0">
+      <padding>
+         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+      </padding>
+   </HBox>
+   <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="27.0" prefWidth="1014.0" text="Start">
+      <VBox.margin>
+         <Insets bottom="10.0" left="150.0" right="150.0" top="10.0"/>
+      </VBox.margin>
+   </Button>
 </VBox>
