--- a/CarAlgorithm/src/caralgorithm/gameField.fxml
+++ b/CarAlgorithm/src/caralgorithm/gameField.fxml
@@ -1,27 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="900.0"
-      stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="caralgorithm.Controller">
-   <Label alignment="CENTER" minWidth="-Infinity" prefHeight="60.0" prefWidth="900.0" text="Nagel-Schreckenberg-Modell">
-      <font>
-         <Font size="18.0"/>
-      </font>
-   </Label>
-   <HBox fx:id="playground" alignment="CENTER" prefHeight="125.0" prefWidth="900.0">
-      <padding>
-         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-      </padding>
-   </HBox>
-   <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="27.0" prefWidth="1014.0" text="Start">
-      <VBox.margin>
-         <Insets bottom="10.0" left="150.0" right="150.0" top="10.0"/>
-      </VBox.margin>
-   </Button>
+
+<VBox fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="900.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="caralgorithm.Controller">
+   <children>
+      <Label alignment="CENTER" minWidth="-Infinity" prefHeight="100.0" prefWidth="900.0" text="Nagel-Schreckenberg-Modell">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <HBox fx:id="playground" alignment="CENTER" prefHeight="100.0" prefWidth="900.0">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </HBox>
+      <GridPane prefHeight="100.0" prefWidth="900.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="29.0" prefWidth="450.0" text="Start" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="1.0" />
+               </GridPane.margin>
+            </Button>
+            <Slider fx:id="tickSlider" blockIncrement="500.0" majorTickUnit="1000.0" max="5000.0" min="500.0" minorTickCount="500" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1000.0" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </Slider>
+            <Slider fx:id="carSlider" max="200.0" showTickLabels="true" showTickMarks="true" value="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </Slider>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="316.0" text="Tickrate (1000 = 1 second)">
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </Label>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="299.0" text="Spawnchance of a new Car" GridPane.columnIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </Label>
+         </children>
+      </GridPane>
+   </children>
 </VBox>
