--- a/CarAlgorithm/src/caralgorithm/gameField.fxml
+++ b/CarAlgorithm/src/caralgorithm/gameField.fxml
@@ -1,47 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="900.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="caralgorithm.Controller">
+<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="1280.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="caralgorithm.Controller">
    <children>
-      <Label alignment="CENTER" minWidth="-Infinity" prefHeight="100.0" prefWidth="900.0" text="Nagel-Schreckenberg-Modell">
+      <Label alignment="CENTER" minWidth="-Infinity" prefHeight="100.0" prefWidth="1280.0" text="Nagel-Schreckenberg-Modell">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <HBox fx:id="playground" alignment="CENTER" prefHeight="100.0" prefWidth="900.0">
+      <HBox fx:id="playground" alignment="CENTER" prefHeight="100.0" prefWidth="1280.0">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </HBox>
-      <GridPane prefHeight="100.0" prefWidth="900.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <GridPane prefHeight="100.0" prefWidth="1280.0">
+         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
             <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="29.0" prefWidth="450.0" text="Start" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets bottom="1.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </Button>
-            <Slider fx:id="tickSlider" blockIncrement="500.0" majorTickUnit="1000.0" max="5000.0" min="1000.0" minorTickCount="500" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1000.0" GridPane.rowIndex="1">
+            <Slider fx:id="tickSlider" blockIncrement="500.0" majorTickUnit="1000.0" max="5000.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1000.0" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
