--- a/CarAlgorithm/src/caralgorithm/gameField.fxml
+++ b/CarAlgorithm/src/caralgorithm/gameField.fxml
@@ -7,21 +7,20 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="1280.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="caralgorithm.Controller">
+<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="caralgorithm.Controller">
    <children>
       <Label alignment="CENTER" minWidth="-Infinity" prefHeight="100.0" prefWidth="1280.0" text="Nagel-Schreckenberg-Modell">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <HBox fx:id="playground" alignment="CENTER" prefHeight="100.0" prefWidth="1280.0">
+      <HBox fx:id="playground" alignment="CENTER" prefHeight="325.0" prefWidth="1280.0">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </HBox>
-      <GridPane prefHeight="100.0" prefWidth="1280.0">
+      <GridPane prefHeight="175.0" prefWidth="1280.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -29,43 +28,56 @@
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="29.0" prefWidth="450.0" text="Start" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <Slider fx:id="tickSlider" blockIncrement="0.5" majorTickUnit="0.5" max="5.0" min="0.5" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="2.5" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </Slider>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="484.0" text="Ticks per second">
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </Label>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="434.0" text="Flea Chance" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </Label>
+            <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </Slider>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="438.0" text="Spawnchance of a new Car" GridPane.rowIndex="2" />
+            <Slider fx:id="carSlider" majorTickUnit="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </GridPane.margin>
+            </Slider>
+            <Button fx:id="starterButton" mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="76.0" prefWidth="406.0" text="Start" GridPane.columnIndex="2" GridPane.rowSpan="2">
+               <GridPane.margin>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </GridPane.margin>
             </Button>
-            <Slider fx:id="tickSlider" blockIncrement="500.0" majorTickUnit="1000.0" max="5000.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1000.0" GridPane.rowIndex="1">
+            <Slider fx:id="fieldsAmount" majorTickUnit="20.0" max="200.0" min="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </Slider>
-            <Slider fx:id="carSlider" majorTickUnit="20.0" minorTickCount="20" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </GridPane.margin>
-            </Slider>
-            <Label alignment="CENTER" prefHeight="17.0" prefWidth="316.0" text="Tickrate (1000 = 1 second)">
+            <Label alignment="CENTER" prefHeight="241.0" prefWidth="427.0" text="Fields" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </Label>
-            <Label alignment="CENTER" prefHeight="17.0" prefWidth="299.0" text="Spawnchance of a new Car" GridPane.columnIndex="2">
+            <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="91.0" prefWidth="406.0" text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
                <GridPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </GridPane.margin>
-            </Label>
-            <Label alignment="CENTER" prefHeight="17.0" prefWidth="228.0" text="Flea Chance" GridPane.columnIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </GridPane.margin>
-            </Label>
-            <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="20" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </GridPane.margin>
-            </Slider>
+            </Button>
          </children>
       </GridPane>
    </children>
