--- a/CarAlgorithm/src/caralgorithm/gameField.fxml
+++ b/CarAlgorithm/src/caralgorithm/gameField.fxml
@@ -47,7 +47,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </Label>
-            <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" prefWidth="5.0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
@@ -58,9 +58,9 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </Slider>
-            <Button fx:id="starterButton" mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="76.0" prefWidth="406.0" text="Start" GridPane.columnIndex="2" GridPane.rowSpan="2">
+            <Button fx:id="starterButton" mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0" text="Start" GridPane.columnIndex="2" GridPane.rowSpan="2">
                <GridPane.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                  <Insets left="20.0" right="20.0" top="40.0" />
                </GridPane.margin>
             </Button>
             <Slider fx:id="fieldsAmount" majorTickUnit="20.0" max="200.0" min="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
@@ -73,9 +73,9 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
             </Label>
-            <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="91.0" prefWidth="406.0" text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
+            <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0" text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
                <GridPane.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                  <Insets bottom="10.0" left="20.0" right="20.0" top="30.0" />
                </GridPane.margin>
             </Button>
          </children>
