--- a/CarAlgorithm/src/ch/kbw/caralgorithm/views/view.fxml
+++ b/CarAlgorithm/src/ch/kbw/caralgorithm/views/view.fxml
@@ -30,61 +30,62 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-        <Slider fx:id="tickSlider" blockIncrement="0.5" majorTickUnit="0.5" max="5.0" min="0.5" minorTickCount="0"
-                showTickLabels="true" showTickMarks="true" value="2.5" GridPane.rowIndex="1">
-            <GridPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-            </GridPane.margin>
-        </Slider>
-        <Label alignment="CENTER" prefHeight="17.0" prefWidth="484.0" text="Ticks per second">
-            <GridPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-            </GridPane.margin>
-        </Label>
-        <Label alignment="CENTER" prefHeight="17.0" prefWidth="434.0" text="Flea Chance" GridPane.columnIndex="1">
-            <GridPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-            </GridPane.margin>
-        </Label>
-        <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" prefWidth="5.0"
-                showTickLabels="true" showTickMarks="true" value="50.0" GridPane.columnIndex="1"
-                GridPane.rowIndex="1">
-            <GridPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-            </GridPane.margin>
-        </Slider>
-        <Label alignment="CENTER" prefHeight="17.0" prefWidth="438.0" text="Spawnchance of a new Car"
-               GridPane.rowIndex="2"/>
-        <Slider fx:id="spawnSlider" majorTickUnit="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true"
-                value="50.0" GridPane.rowIndex="3">
-            <GridPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-            </GridPane.margin>
-        </Slider>
-        <Button fx:id="starterButton" mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0"
-                prefWidth="406.0" text="Start" GridPane.columnIndex="2" GridPane.rowSpan="2">
-            <GridPane.margin>
-                <Insets left="20.0" right="20.0" top="40.0"/>
-            </GridPane.margin>
-        </Button>
-        <Slider fx:id="amountOfFields" majorTickUnit="20.0" max="200.0" min="20.0" minorTickCount="0"
-                showTickLabels="true" showTickMarks="true" snapToTicks="true" value="60.0" GridPane.columnIndex="1"
-                GridPane.rowIndex="3">
-            <GridPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-            </GridPane.margin>
-        </Slider>
-        <Label alignment="CENTER" prefHeight="241.0" prefWidth="427.0" text="Fields" GridPane.columnIndex="1"
-               GridPane.rowIndex="2">
-            <GridPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-            </GridPane.margin>
-        </Label>
-        <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0"
-                text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
-            <GridPane.margin>
-                <Insets bottom="10.0" left="20.0" right="20.0" top="30.0"/>
-            </GridPane.margin>
-        </Button>
+        <children>
+            <Slider fx:id="tickSlider" blockIncrement="0.5" majorTickUnit="0.5" max="5.0" min="0.5" minorTickCount="0"
+                    showTickLabels="true" showTickMarks="true" value="2.5" GridPane.rowIndex="1">
+                <GridPane.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </GridPane.margin>
+            </Slider>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="484.0" text="Ticks per second">
+                <GridPane.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </GridPane.margin>
+            </Label>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="434.0" text="Flea Chance" GridPane.columnIndex="1">
+                <GridPane.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </GridPane.margin>
+            </Label>
+            <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" prefWidth="5.0"
+                    showTickLabels="true" showTickMarks="true" value="50.0" GridPane.columnIndex="1"
+                    GridPane.rowIndex="1">
+                <GridPane.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </GridPane.margin>
+            </Slider>
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="438.0" text="Spawnchance of a new Car"
+                   GridPane.rowIndex="2"/>
+            <Slider fx:id="spawnSlider" majorTickUnit="20.0" minorTickCount="0" showTickLabels="true"
+                    showTickMarks="true" value="50.0" GridPane.rowIndex="3">
+                <GridPane.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </GridPane.margin>
+            </Slider>
+            <Button fx:id="starterButton" mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0"
+                    prefWidth="406.0" text="Start" GridPane.columnIndex="2" GridPane.rowSpan="2">
+                <GridPane.margin>
+                    <Insets left="20.0" right="20.0" top="40.0"/>
+                </GridPane.margin>
+            </Button>
+            <Slider fx:id="amountOfFields" max="250.0" min="25.0" minorTickCount="0" showTickLabels="true"
+                    showTickMarks="true" snapToTicks="true" value="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <GridPane.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </GridPane.margin>
+            </Slider>
+            <Label alignment="CENTER" prefHeight="241.0" prefWidth="427.0" text="Fields" GridPane.columnIndex="1"
+                   GridPane.rowIndex="2">
+                <GridPane.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </GridPane.margin>
+            </Label>
+            <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0"
+                    text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
+                <GridPane.margin>
+                    <Insets bottom="10.0" left="20.0" right="20.0" top="30.0"/>
+                </GridPane.margin>
+            </Button>
+        </children>
     </GridPane>
 </VBox>
