--- a/CarAlgorithm/src/ch/kbw/caralgorithm/views/statistics.fxml
+++ b/CarAlgorithm/src/ch/kbw/caralgorithm/views/statistics.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
+<?import javafx.geometry.Insets?>
 
 <VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" stylesheets="@carColors.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.SimulationController">
     <children>
@@ -26,7 +29,7 @@
                         </MenuBar>
                     </children>
                 </VBox>
-                <Label alignment="CENTER" minWidth="-Infinity" prefHeight="80.0" prefWidth="800.0" text="Nagel-Schreckenberg-Modell Normal">
+                <Label alignment="CENTER" minWidth="-Infinity" prefHeight="80.0" prefWidth="800.0" text="Nagel-Schreckenberg-Modell Statistics">
                     <font>
                         <Font size="18.0" />
                     </font>
@@ -36,7 +39,7 @@
                 </Label>
             </children>
         </HBox>
-      <Label fx:id="l" />
+        <Label fx:id="l" />
         <HBox fx:id="playground" alignment="CENTER" prefHeight="325.0" prefWidth="1280.0">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
