--- a/CarAlgorithm/src/ch/kbw/resources/fxml/statistics.fxml
+++ b/CarAlgorithm/src/ch/kbw/resources/fxml/statistics.fxml
@@ -1,42 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
+<?import javafx.geometry.Insets?>
 
-<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" stylesheets="@carColors.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.SimulationController">
+<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" stylesheets="@../stylesheets/carColors.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.SimulationController">
     <children>
-        <HBox alignment="CENTER_RIGHT" prefHeight="100.0">
-            <children>
-                <VBox fx:id="vbox" prefHeight="100.0" prefWidth="101.0">
-                    <children>
-                        <MenuBar fx:id="menubar" prefHeight="32.0" prefWidth="104.0" style="-fx-background-color: lightblue;">
-                            <menus>
-                                <Menu mnemonicParsing="false" text="Auswahl">
-                                    <items>
-                                        <MenuItem mnemonicParsing="false" onAction="#handleMenuNormal" text="Normal" />
-                                        <MenuItem mnemonicParsing="false" onAction="#handleMenuHistory" text="History" />
-                                        <MenuItem mnemonicParsing="false" onAction="#handleMenuStatistiken" text="Statistiken" />
-                                    </items>
-                                </Menu>
-                            </menus>
-                        </MenuBar>
-                    </children>
-                </VBox>
-                <Label alignment="CENTER" minWidth="-Infinity" prefHeight="80.0" prefWidth="800.0" text="Nagel-Schreckenberg-Modell Normal">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                    <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </HBox.margin>
-                </Label>
-            </children>
-        </HBox>
-      <Label fx:id="l" />
+        <Label fx:id="l" />
         <HBox fx:id="playground" alignment="CENTER" prefHeight="325.0" prefWidth="1280.0">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
