--- a/CarAlgorithm/src/ch/kbw/resources/fxml/navigation.fxml
+++ b/CarAlgorithm/src/ch/kbw/resources/fxml/navigation.fxml
@@ -21,7 +21,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label alignment="CENTER" prefHeight="50.0" prefWidth="1200.0" text="Nagel-Schreckenberg-Modell" GridPane.columnSpan="3">
+            <Label fx:id="title" alignment="CENTER" prefHeight="50.0" prefWidth="1200.0" text="Nagel-Schreckenberg-Modell" GridPane.columnSpan="3">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
