--- a/CarAlgorithm/src/ch/kbw/resources/stylesheets/carColors.css
+++ b/CarAlgorithm/src/ch/kbw/resources/stylesheets/carColors.css
@@ -1,6 +1,5 @@
 #white {
-    -fx-background-color: white;
-    -fx-border-color: black;
+    -fx-background-color: rgb(150, 150, 150);
 }
 
 #red {
