--- a/CarAlgorithm/src/ch/kbw/resources/fxml/home.fxml
+++ b/CarAlgorithm/src/ch/kbw/resources/fxml/home.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import java.lang.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
 
-<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" stylesheets="@../stylesheets/carColors.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.HomeController">
+<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.HomeController">
     <children>
       <Label fx:id="l" />
         <HBox fx:id="playground" alignment="CENTER" prefHeight="325.0" prefWidth="1200.0">
@@ -28,48 +27,48 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Slider fx:id="tickSlider" blockIncrement="0.5" majorTickUnit="0.5" max="5.0" min="0.5" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="2.5" GridPane.rowIndex="1">
+                <Slider fx:id="tickSlider" blockIncrement="0.5" majorTickUnit="0.5" max="5.0" min="0.5" minorTickCount="0" showTickLabels="true" showTickMarks="true" styleClass="text" value="2.5" GridPane.rowIndex="1">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Slider>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="484.0" text="Ticks per second">
+                <Label alignment="CENTER" prefHeight="17.0" prefWidth="484.0" styleClass="text" text="Ticks per second">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="434.0" text="Flea Chance" GridPane.columnIndex="1">
+                <Label alignment="CENTER" prefHeight="17.0" prefWidth="434.0" styleClass="text" text="Flea Chance" GridPane.columnIndex="1">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" prefWidth="5.0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" prefWidth="5.0" showTickLabels="true" showTickMarks="true" styleClass="text" value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Slider>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="438.0" text="Spawnchance of a new Car" GridPane.rowIndex="2" />
-                <Slider fx:id="spawnSlider" majorTickUnit="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.rowIndex="3">
+                <Label alignment="CENTER" prefHeight="17.0" prefWidth="438.0" styleClass="text" text="Spawnchance of a new Car" GridPane.rowIndex="2" />
+                <Slider fx:id="spawnSlider" majorTickUnit="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" styleClass="text" value="50.0" GridPane.rowIndex="3">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Slider>
-                <Button fx:id="starterButton" mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0" text="Start" GridPane.columnIndex="2" GridPane.rowSpan="2">
+                <Button id="startButton" fx:id="starterButton" mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0" text="Start" GridPane.columnIndex="2" GridPane.rowSpan="2">
                     <GridPane.margin>
                         <Insets left="20.0" right="20.0" top="40.0" />
                     </GridPane.margin>
                 </Button>
-                <Slider fx:id="amountOfFields" max="250.0" min="25.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <Slider fx:id="amountOfFields" max="250.0" min="25.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" styleClass="text" value="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Slider>
-                <Label alignment="CENTER" prefHeight="241.0" prefWidth="427.0" text="Fields" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <Label alignment="CENTER" prefHeight="241.0" prefWidth="427.0" styleClass="text" text="Fields" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0" text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
+                <Button id="resetButton" mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0" text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="20.0" right="20.0" top="30.0" />
                     </GridPane.margin>
@@ -77,4 +76,9 @@
             </children>
         </GridPane>
     </children>
+   <stylesheets>
+      <URL value="@../stylesheets/carColors.css" />
+       <URL value="@../stylesheets/homeStyleSheet.css" />
+      <URL value="@../stylesheets/styleSheet.css" />
+   </stylesheets>
 </VBox>
