--- a/CarAlgorithm/src/ch/kbw/resources/fxml/statistics.fxml
+++ b/CarAlgorithm/src/ch/kbw/resources/fxml/statistics.fxml
@@ -1,83 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="window" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" stylesheets="@../stylesheets/carColors.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.HomeController">
-    <children>
-        <Label fx:id="l" />
-        <HBox fx:id="playground" alignment="CENTER" prefHeight="325.0" prefWidth="1280.0">
-            <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </padding>
-        </HBox>
-        <GridPane prefHeight="175.0" prefWidth="1280.0">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <Slider fx:id="tickSlider" blockIncrement="0.5" majorTickUnit="0.5" max="5.0" min="0.5" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="2.5" GridPane.rowIndex="1">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Slider>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="484.0" text="Ticks per second">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Label>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="434.0" text="Flea Chance" GridPane.columnIndex="1">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Label>
-                <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" prefWidth="5.0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Slider>
-                <Label alignment="CENTER" prefHeight="17.0" prefWidth="438.0" text="Spawnchance of a new Car" GridPane.rowIndex="2" />
-                <Slider fx:id="spawnSlider" majorTickUnit="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.rowIndex="3">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Slider>
-                <Button fx:id="starterButton" mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0" text="Start" GridPane.columnIndex="2" GridPane.rowSpan="2">
-                    <GridPane.margin>
-                        <Insets left="20.0" right="20.0" top="40.0" />
-                    </GridPane.margin>
-                </Button>
-                <Slider fx:id="amountOfFields" max="250.0" min="25.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Slider>
-                <Label alignment="CENTER" prefHeight="241.0" prefWidth="427.0" text="Fields" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </GridPane.margin>
-                </Label>
-                <Button mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0" text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
-                    <GridPane.margin>
-                        <Insets bottom="10.0" left="20.0" right="20.0" top="30.0" />
-                    </GridPane.margin>
-                </Button>
-            </children>
-        </GridPane>
-    </children>
-</VBox>
+<?import java.net.URL?>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../stylesheets/statisticsStyleSheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.kbw.caralgorithm.viewControllers.StatisticsController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <Label styleClass="text" text="Cars in Lane">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="text" text="Average Speed" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="text" text="Spawn Chance" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="text" text="Flea Chance" GridPane.rowIndex="3">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Label styleClass="text" text="Ticks passed" GridPane.rowIndex="4">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <HBox fx:id="displayField" prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+      <Label fx:id="amount" styleClass="text" text="AMOUNT" GridPane.columnIndex="1">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Label fx:id="avgSpeed" styleClass="text" text="AVGSPEED" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Label fx:id="spawnChance" styleClass="text" text="SPAWNCHANCE" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Label fx:id="fleaChance" styleClass="text" text="FLEACHANCE" GridPane.columnIndex="1" GridPane.rowIndex="3">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
+      </Label>
+      <Label fx:id="ticks" styleClass="text" text="TICKS" GridPane.columnIndex="1" GridPane.rowIndex="4">
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
+      </Label>
+   </children>
+    <stylesheets>
+        <URL value="@../stylesheets/styleSheet.css" />
+    </stylesheets>
+</GridPane>
