--- a/CarAlgorithm/src/ch/kbw/resources/fxml/home.fxml
+++ b/CarAlgorithm/src/ch/kbw/resources/fxml/home.fxml
@@ -27,7 +27,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Slider fx:id="tickSlider" blockIncrement="0.5" majorTickUnit="0.5" max="5.0" min="0.5" minorTickCount="0" showTickLabels="true" showTickMarks="true" styleClass="text" value="2.5" GridPane.rowIndex="1">
+                <Slider fx:id="tickSlider" blockIncrement="0.5" majorTickUnit="0.5" max="5.0" min="0.5" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="2.5" GridPane.rowIndex="1">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
@@ -42,13 +42,13 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" prefWidth="5.0" showTickLabels="true" showTickMarks="true" styleClass="text" value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <Slider fx:id="fleaSlider" blockIncrement="5.0" majorTickUnit="20.0" minorTickCount="0" prefWidth="5.0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Slider>
                 <Label alignment="CENTER" prefHeight="17.0" prefWidth="438.0" styleClass="text" text="Spawnchance of a new Car" GridPane.rowIndex="2" />
-                <Slider fx:id="spawnSlider" majorTickUnit="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" styleClass="text" value="50.0" GridPane.rowIndex="3">
+                <Slider fx:id="spawnSlider" majorTickUnit="20.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" value="50.0" GridPane.rowIndex="3">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
@@ -58,7 +58,7 @@
                         <Insets left="20.0" right="20.0" top="40.0" />
                     </GridPane.margin>
                 </Button>
-                <Slider fx:id="amountOfFields" max="250.0" min="25.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" styleClass="text" value="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <Slider fx:id="amountOfFields" max="250.0" min="25.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="60.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
@@ -68,7 +68,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </GridPane.margin>
                 </Label>
-                <Button id="resetButton" mnemonicParsing="false" onAction="#handleButtonStart" prefHeight="100.0" prefWidth="406.0" text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
+                <Button id="resetButton" mnemonicParsing="false" onAction="#handleButtonReset" prefHeight="100.0" prefWidth="406.0" text="Reset" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.rowSpan="2">
                     <GridPane.margin>
                         <Insets bottom="10.0" left="20.0" right="20.0" top="30.0" />
                     </GridPane.margin>
