--- a/src/main/resources/views/navigation.fxml
+++ b/src/main/resources/views/navigation.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -7,6 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import java.lang.String?>
 <?import java.net.URL?>
+
 <BorderPane id="navBackground" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="viewControllers.NavigationController">
    <top>
       <GridPane prefHeight="125.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
@@ -20,7 +26,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label id="title" fx:id="title" alignment="CENTER" prefHeight="50.0" prefWidth="1200.0" text="Nagel-Schreckenberg-Modell" GridPane.columnSpan="3">
+            <Label id="title" fx:id="title" alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="1200.0" text="Nagel-Schreckenberg-Modell" GridPane.columnSpan="2">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
@@ -37,6 +43,25 @@
                   <String fx:value="navButton" />
                   <String fx:value="navButtonR" />
                </styleClass></Button>
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#handleButtonStop" prefHeight="40.0" prefWidth="40.0" styleClass="stopButton">
+                     <HBox.margin>
+                        <Insets bottom="14.0" left="15.0" right="15.0" top="14.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#handleButtonPlay" prefHeight="40.0" prefWidth="40.0" styleClass="playButton">
+                     <HBox.margin>
+                        <Insets bottom="14.0" left="15.0" right="15.0" top="14.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#handleButtonForward" prefHeight="40.0" prefWidth="40.0" styleClass="forwardButton">
+                     <HBox.margin>
+                        <Insets bottom="14.0" left="15.0" right="15.0" top="14.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </GridPane>
    </top>
