--- a/src/main/resources/styleSheets/carColors.css
+++ b/src/main/resources/styleSheets/carColors.css
@@ -4,35 +4,37 @@
 
 #red {
     -fx-background-color: rgb(200, 50, 0);
-    -fx-border-color: black;
 }
 
 #darkOrange {
     -fx-background-color: rgb(140, 80, 0);
-    -fx-border-color: black;
 }
 
 #orange {
     -fx-background-color: rgb(220, 140, 0);
-    -fx-border-color: black;
 }
 
 #darkYellow {
     -fx-background-color: rgb(190, 190, 0);
-    -fx-border-color: black;
 }
 
 #yellow {
     -fx-background-color: rgb(255, 255, 0);
-    -fx-border-color: black;
 }
 
 #green {
     -fx-background-color: rgb(20, 200, 20);
-    -fx-border-color: black;
 }
 
 #darkGreen {
     -fx-background-color: rgb(0, 100, 0);
-    -fx-border-color: black;
+}
+
+.border {
+    -fx-border-width: 1px;
+    -fx-border-color: rgb(0, 0, 0);
+}
+
+.borderless {
+    -fx-border-color: transparent;
 }
